"Si la pantall es chica ponerle fixed height al mapa"

--- a/templates/core/buscador.html
+++ b/templates/core/buscador.html
@@ -34,6 +34,7 @@
             body { padding-left: 20px; padding-right: 20px; }
             div.navbar-fixed-top { margin-left: -20px; margin-right: -20px; }
             #bloque_izquierda { margin-bottom: 5px; height: auto; }
+            #bloque_derecha { width: 100%; height: 600px; }
         }
     </style>
 {% endblock %}
