--- a/templates/core/seleccionar_ciudad.html
+++ b/templates/core/seleccionar_ciudad.html
@@ -1,62 +1,7 @@
 {% extends "base.html" %}
 
 {% block custom_styles %}
-    <style type="text/css">
-        body { background-color: #42bfe5; padding-top: 60px;}
-
-        .bs-docs-sidenav .icon-chevron-right {
-            float: right;
-            margin-top: 2px;
-            margin-right: -6px;
-            opacity: .25;
-        }
-
-        .bs-docs-sidenav > li > a:hover { background-color: #f5f5f5; }
-
-        .bs-docs-sidenav a:hover .icon-chevron-right { opacity: .5; }
-
-        .bs-docs-sidenav > li > a {
-            display: block;
-            width: 190px 9;
-            margin: 0 0 -1px;
-            padding: 8px 14px;
-            border: 1px solid #E5E5E5;
-            background-color: white;
-        }
-
-        .bs-docs-sidenav {
-            width: 300px;
-            padding: 0;
-            position: relative;
-            left: 50%;
-            margin-left: -150px;
-            background-color: #fff;
-                -webkit-border-radius: 6px;
-                -moz-border-radius: 6px;
-            border-radius: 6px;
-                -webkit-box-shadow: 0 1px 4px rgba(0,0,0,.065);
-                -moz-box-shadow: 0 1px 4px rgba(0,0,0,.065);
-            box-shadow: 0 1px 4px rgba(0,0,0,.065);
-        }
-
-        .bs-docs-sidenav > li:first-child > a {
-            -webkit-border-radius: 6px 6px 0 0;
-            -moz-border-radius: 6px 6px 0 0;
-            border-radius: 6px 6px 0 0;
-        }
-
-        .bs-docs-sidenav > li:last-child > a {
-            -webkit-border-radius: 0 0 6px 6px;
-            -moz-border-radius: 0 0 6px 6px;
-            border-radius: 0 0 6px 6px;
-        }
-
-        @media (min-width: 650px) {
-            .floated-left { float:left; }
-            .block-wrapper { position: absolute; left: 50%; margin-left: -315px; }
-            .bs-docs-sidebar { margin-left: 30px; }
-        }
-    </style>
+    <link href="/media/css/seleccionar_ciudad.css" rel="stylesheet" type="text/css" />
 {% endblock %}
 
 <!--Este es un template distinto a todos, por eso redefine el blocke "content" -->
@@ -78,4 +23,3 @@
         </div>
     </div>
 {% endblock %}
-
