--- a/templates/core/buscador.html
+++ b/templates/core/buscador.html
@@ -11,32 +11,7 @@
 {% endblock %}
 
 {% block custom_styles %}
-    <style type="text/css">
-        div {  }
-        div.tab-pane { overflow: hidden; }
-
-        @media (min-width: 980px) {
-            body { padding-top: 40px; overflow: hidden; }
-            #bloque_izquierda {
-                float: left;
-                width: 380px;
-                margin-right: 5px;
-                padding: 10px;
-                overflow: auto;
-            }
-            #bloque_derecha {
-                float: left;
-                overflow: hidden;
-            }
-        }
-
-        @media (max-width: 979px) {
-            body { padding-left: 20px; padding-right: 20px; }
-            div.navbar-fixed-top { margin-left: -20px; margin-right: -20px; }
-            #bloque_izquierda { margin-bottom: 5px; height: auto; }
-            #bloque_derecha { width: 100%; height: 600px; }
-        }
-    </style>
+    <link href="/media/css/buscador.css" rel="stylesheet" type="text/css" />
 {% endblock %}
 
 {% block content %}
