Mandar del seleccionar_ciudad directo al mapa

--- a/templates/core/seleccionar_ciudad.html
+++ b/templates/core/seleccionar_ciudad.html
@@ -16,7 +16,7 @@
             <div class="floated-left bs-docs-sidebar" style="min-width: 300px; margin-top: 20px;">
                 <ul class="nav nav-list bs-docs-sidenav">
                     {% for ciudad in ciudades %}
-                    <li><a href="/{{ciudad.slug}}/"><i class="icon-chevron-right"></i> {{ciudad.nombre}}</a></li>
+                    <li><a href="/mapa/{{ciudad.slug}}/"><i class="icon-chevron-right"></i> {{ciudad.nombre}}</a></li>
                     {% endfor %}
                 </ul>
             </div>
