Eliminar una coma que sobra. Se rompia el funcking IE7

--- a/templates/core/buscador.html
+++ b/templates/core/buscador.html
@@ -113,7 +113,7 @@
                 "B:false:false": { externalGraphic: "/media/css/openlayers/markerB.png", graphicWidth: 20, graphicHeight: 50, graphicYOffset: -50, graphicOpacity: 1 },
                 "B:true:false" : { externalGraphic: "/media/css/openlayers/markerB-hover.png", graphicWidth: 20, graphicHeight: 50, graphicYOffset: -50, graphicOpacity: 1 },
                 "B:false:true" : { externalGraphic: "/media/css/openlayers/markerB-drag.png", graphicWidth: 20, graphicHeight: 50, graphicYOffset: -41, graphicOpacity: 1 },
-                "B:true:true"  : { externalGraphic: "/media/css/openlayers/markerB-drag.png", graphicWidth: 20, graphicHeight: 50, graphicYOffset: -41, graphicOpacity: 1 },
+                "B:true:true"  : { externalGraphic: "/media/css/openlayers/markerB-drag.png", graphicWidth: 20, graphicHeight: 50, graphicYOffset: -41, graphicOpacity: 1 }
             }
             styleMap.addUniqueValueRules("default", "tipo", lookup);
 
