--- a/templates/core/ver_ciudad.html
+++ b/templates/core/ver_ciudad.html
@@ -70,21 +70,24 @@
     </table>
     <br />
 
-    <h3>Dejanos un comentario sobre "{{ciudad_actual.nombre}}"</h3>
-    <div id="disqus_thread"></div>
-    <script type="text/javascript">
-        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-        var disqus_shortname = 'cualbondi'; // required: replace example with your forum shortname
+    <!--[if gt IE 7]>
+        <h3>Dejanos un comentario sobre "{{ciudad_actual.nombre}}"</h3>
+        <div id="disqus_thread"></div>
+        <script type="text/javascript">
+            /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+            var disqus_shortname = 'cualbondi'; // required: replace example with your forum shortname
 
-        /* * * DON'T EDIT BELOW THIS LINE * * */
-        (function() {
-            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-            dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-        })();
-    </script>
-    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+            /* * * DON'T EDIT BELOW THIS LINE * * */
+            (function() {
+                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+            })();
+        </script>
+
+        <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+        <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+    <![endif]-->
 {% endblock %}
 
 {% block custom_ready_function %}
@@ -95,7 +98,7 @@
     var proj = new OpenLayers.Projection("EPSG:4326");
 
     //Creamos el mapa
-    map = new OpenLayers.Map("map", {theme: null})
+    var map = new OpenLayers.Map('map', {theme: null});
     var gmap = new OpenLayers.Layer.Google(
         "Google Streets", {numZoomLevels: 20}
     );
