Arreglar btn-group en el ¿Como llegar? para IE7

--- a/media/css/buscador.css
+++ b/media/css/buscador.css
@@ -9,6 +9,7 @@ div.tab-pane { overflow: hidden; }
         margin-right: 5px;
         padding: 10px;
         overflow: auto;
+        position: relative;
     }
     #bloque_derecha {
         float: left;
