--- a/templates/core/buscador.html
+++ b/templates/core/buscador.html
@@ -27,15 +27,16 @@
                         <input type="text" id="inputDesde" class="input-block-level" placeholder="Desde" {% if desde %}value="{{desde}}"{% endif %}>
                         <input type="text" id="inputHasta" class="input-block-level" placeholder="Hasta" {% if hasta %}value="{{hasta}}"{% endif %}>
                         <p><small>Ejemplos: {{ ciudad_actual.sugerencia }}</small></p>
-                        <div class="btn-toolbar">
+                        <div style="float:left;">
                             <div class="btn-group">
-                                <a id="button-origendestino" class="btn" title="Cambiar origen por destino"><i class="icon-refresh"></i></a>
-                                <a id="button-ayuda" class="btn" title="Ayuda"><i class="icon-question-sign"></i></a>
-                            </div>
-                            <div class="btn-group pull-right">
-                                <button id="button-buscarinputs" class="btn btn-primary" title="Buscar recorridos" type="submit"><i class="icon-search icon-white"></i> Buscar</button>
+                                <button id="button-origendestino" class="btn" title="Cambiar origen por destino"><i class="icon-refresh"></i></button>
+                                <button id="button-ayuda" class="btn" title="Ayuda"><i class="icon-question-sign"></i></button>
                             </div>
                         </div>
+                        <div style="float:right;">
+                            <button id="button-buscarinputs" class="btn btn-primary" title="Buscar recorridos" type="submit"><i class="icon-search icon-white"></i> Buscar</button>
+                        </div>
+                        <div style="clear:both;"></div>
                     </form>
                 </div>
                 <div class="tab-pane" id="2">
