Agrega titulos a las paginas

--- a/templates/core/buscador.html
+++ b/templates/core/buscador.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}Cualbondi - Buscador de recorridos de micros en la ciudad de {{ciudad_actual.nombre|title}}{% endblock %}
+
 {% block navbar %}
     <div class="navbar navbar-fixed-top navbar-inverse">
         <div class="navbar-inner">
