--- a/templates/core/seleccionar_ciudad.html
+++ b/templates/core/seleccionar_ciudad.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}Cualbondi - Selección de ciudad{% endblock %}
+
 {% block custom_styles %}
     <link href="/media/css/seleccionar_ciudad.css" rel="stylesheet" type="text/css" />
 {% endblock %}
