--- a/templates/core/ver_ciudad.html
+++ b/templates/core/ver_ciudad.html
@@ -3,6 +3,8 @@
 {% load comments %}
 {% load bootstrap_tags %}
 
+{% block title %}Cualbondi - Información general sobre transporte público en la ciudad de {{ciudad_actual.nombre|title}}{% endblock %}
+
 {% block custom_top_scripts %}
     <script src="http://openlayers.org/api/OpenLayers.js"></script>
     <script src="http://maps.google.com/maps/api/js?v=3.6&amp;sensor=false"></script>
