--- a/templates/core/ver_linea.html
+++ b/templates/core/ver_linea.html
@@ -1,6 +1,8 @@
 {% extends "contenido.html" %}
 {% load bootstrap_tags %}
 
+{% block title %}Cualbondi - Linea {{linea_actual.nombre|title}} en {{ciudad_actual.nombre|title}}: Listado de recorridos de colectivos, micros, buses{% endblock %}
+
 {% block custom_top_scripts %}
     <script src="http://openlayers.org/api/OpenLayers.js"></script>
     <script src="http://maps.google.com/maps/api/js?v=3.6&amp;sensor=false"></script>
