--- a/templates/core/ver_recorrido.html
+++ b/templates/core/ver_recorrido.html
@@ -1,5 +1,7 @@
 {% extends "contenido.html" %}
 
+{% block title %}Cualbondi - Linea {{linea_actual.nombre|title}}, Ramal {{recorrido_actual.nombre|title}}{% if recorrido_actual.inicio and recorrido_actual.fin %}, Recorrido desde {{recorrido_actual.inicio}} hasta {{recorrido_actual.fin}} {% endif %} en {{ciudad_actual.nombre|title}}: Descripción del recorrido de colectivo, micro, bus.{% endblock %}
+
 {% block custom_top_scripts %}
     <script src="http://openlayers.org/api/OpenLayers.js"></script>
     <script src="http://maps.google.com/maps/api/js?v=3.6&amp;sensor=false"></script>
