Usar <a> en lugar de <button> para el btn-group

--- a/templates/core/buscador.html
+++ b/templates/core/buscador.html
@@ -31,8 +31,8 @@
                         <p><small>Ejemplos: {{ ciudad_actual.sugerencia }}</small></p>
                         <div style="float:left;">
                             <div class="btn-group">
-                                <button id="button-origendestino" class="btn" title="Cambiar origen por destino"><i class="icon-refresh"></i></button>
-                                <button id="button-ayuda" class="btn" title="Ayuda"><i class="icon-question-sign"></i></button>
+                                <a id="button-origendestino" class="btn" title="Cambiar origen por destino"><i class="icon-refresh"></i></a>
+                                <a id="button-ayuda" class="btn" title="Ayuda"><i class="icon-question-sign"></i></a>
                             </div>
                         </div>
                         <div style="float:right;">
