--- a/templates/core/buscador.html
+++ b/templates/core/buscador.html
@@ -25,27 +25,23 @@
             </ul>
             <div class="tab-content">
                 <div class="tab-pane active" id="1">
-                    <form>
-                        <input type="text" id="inputDesde" class="input-block-level" placeholder="Desde" {% if desde %}value="{{desde}}"{% endif %}>
-                        <input type="text" id="inputHasta" class="input-block-level" placeholder="Hasta" {% if hasta %}value="{{hasta}}"{% endif %}>
-                        <p><small>Ejemplos: {{ ciudad_actual.sugerencia }}</small></p>
-                        <div style="float:left;">
-                            <div class="btn-group">
-                                <a id="button-origendestino" class="btn" title="Cambiar origen por destino"><i class="icon-refresh"></i></a>
-                                <a id="button-ayuda" class="btn" title="Ayuda"><i class="icon-question-sign"></i></a>
-                            </div>
+                    <input type="text" id="inputDesde" class="input-block-level" placeholder="Desde" {% if desde %}value="{{desde}}"{% endif %}>
+                    <input type="text" id="inputHasta" class="input-block-level" placeholder="Hasta" {% if hasta %}value="{{hasta}}"{% endif %}>
+                    <p><small>Ejemplos: {{ ciudad_actual.sugerencia }}</small></p>
+                    <div style="float:left;">
+                        <div class="btn-group">
+                            <a id="button-origendestino" class="btn" title="Cambiar origen por destino"><i class="icon-refresh"></i></a>
+                            <a id="button-ayuda" class="btn" title="Ayuda"><i class="icon-question-sign"></i></a>
                         </div>
-                        <div style="float:right;">
-                            <button id="button-buscarinputs" class="btn btn-primary" title="Buscar recorridos" type="submit"><i class="icon-search icon-white"></i> Buscar</button>
-                        </div>
-                        <div style="clear:both;"></div>
-                    </form>
+                    </div>
+                    <div style="float:right;">
+                        <button id="button-buscarinputs" class="btn btn-primary" title="Buscar recorridos" type="submit"><i class="icon-search icon-white"></i> Buscar</button>
+                    </div>
+                    <div style="clear:both;"></div>
                 </div>
                 <div class="tab-pane" id="2">
-                    <form>
-                        <input type="text" id="inputLinea" class="input-block-level" placeholder="Linea, ramal, recorrido" data-provide="typeahead">
-                        <button class="btn btn-primary" type="submit"><i class="icon-search icon-white"></i> Buscar</button>
-                    </form>
+                    <input type="text" id="inputLinea" class="input-block-level" placeholder="Linea, ramal, recorrido" data-provide="typeahead">
+                    <button class="btn btn-primary" type="submit"><i class="icon-search icon-white"></i> Buscar</button>
                 </div>
             </div>
             <hr>
@@ -491,8 +487,18 @@
                 markerA.confirmado = false
                 markerB.confirmado = false
             }
+
             $("#inputDesde").bind("change", invalidarMarkers)
             $("#inputHasta").bind("change", invalidarMarkers)
+
+            function input_press_enter(event){
+                if (event.which == 13){
+                    $("#button-buscarinputs").click();
+                }
+            }
+
+            $("#inputDesde").keypress(input_press_enter);
+            $("#inputHasta").keypress(input_press_enter);
 
             $("#button-buscarinputs").bind("click", function(e) {
                 e.preventDefault();
